--- a/shop-circular-catgories.html
+++ b/shop-circular-catgories.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ShopNest – The Ultimate eCommerce HTML Template</title>
+  <title>Imperium Fit Shop</title>
   <!--favicon-->
 	<link rel="icon" href="assets/images/favicon.png" type="image/png">
   <!--font-->
@@ -100,7 +100,7 @@
     <nav class="navbar navbar-expand-xl border-bottom py-3">
       <div class="container px-3">
         <a class="navbar-brand d-none d-xl-flex" href="index.html">
-          <img src="assets/images/gallery/logo.png" class="logo-img" alt="">
+          <img src="assets/images/gallery/articulos/imperiumlogo.png" class="logo-img" alt="">
         </a>
         <button type="button" class="d-xl-none btn-menu-close" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasNavbar">
@@ -108,7 +108,7 @@
         </button>
         <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar">
           <div class="offcanvas-header">
-            <img src="assets/images/gallery/logo.png" class="logo-img2" alt="">
+            <img src="assets/images/gallery/articulos/imperiumlogo.png" class="logo-img2" alt="">
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="nav-search p-3 pt-0 border-bottom d-flex d-xl-none">
