--- a/product-detail-grid.html
+++ b/product-detail-grid.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ShopNest – The Ultimate eCommerce HTML Template</title>
+  <title>Imperium Fit Shop</title>
   <!--favicon-->
-	<link rel="icon" href="assets/images/favicon.png" type="image/png">
+	<link rel="icon" href="assets/images/gallery/articulos/imperiumlogo.png" type="image/png">
   <!--font-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
