imagenes nuevas preba 1

--- a/index.html
+++ b/index.html
@@ -80,9 +80,6 @@
                 <span class="parent-menu-icon ms-2"><i class="bi bi-chevron-down"></i></span>
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="shop-grid-left-sidebar.html">Cardio</a></li>
-                <li><a class="dropdown-item" href="shop-grid-right-sidebar.html">Maquinas de fuerza</a></li>
-                <li>
                   <hr class="dropdown-divider">
            
                   <hr class="dropdown-divider">
@@ -202,6 +199,7 @@
                       <h3 class="product-name mb-1" data-bs-toggle="tooltip" data-bs-placement="left"
                         data-bs-title="Wishlist">Elíptica</h3>
                       <p class="mb-0 product-price">1,725.00</p>
+                      <p class="mb-0 product-description"> Tamaño de la máquina: 2200*750*1620MM - Peso: 120 kg</p>
                     </div>
                   </div>
                 </div>
