--- a/product-detail.html
+++ b/product-detail.html
@@ -62,30 +62,7 @@
           </li>
         </ul>
       </div>
-      <div class="dropdown language">
-        <a class="btn btn-sm btn-language btn-outline-light border-0 d-flex align-items-center gap-2 px-2 dropdown-toggle dropdown-toggle-nocaret"
-          href="javascript:;" data-bs-toggle="dropdown">
-          <span>English</span><span><i class="bi bi-chevron-down"></i></span>
-        </a>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="javascript:;">French</a></li>
-          <li><a class="dropdown-item" href="javascript:;">Spanish</a></li>
-          <li><a class="dropdown-item" href="javascript:;">hindi</a></li>
-        </ul>
-      </div>
-      <div class="dropdown language">
-        <a class="btn btn-sm btn-language btn-outline-light border-0 d-flex align-items-center gap-2 px-2 dropdown-toggle dropdown-toggle-nocaret"
-          href="javascript:;" data-bs-toggle="dropdown">
-          <span>USD</span><span><i class="bi bi-chevron-down"></i></span>
-        </a>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="javascript:;">EUR</a></li>
-          <li><a class="dropdown-item" href="javascript:;">INR</a></li>
-          <li><a class="dropdown-item" href="javascript:;">KGM</a></li>
-          <li><a class="dropdown-item" href="javascript:;">DSR</a></li>
-        </ul>
-      </div>
-    </div>
+      
   </header>
   <!--end header-->
 
@@ -94,7 +71,7 @@
     <nav class="navbar navbar-expand-xl border-bottom py-3">
       <div class="container px-3">
         <a class="navbar-brand d-none d-xl-flex" href="index.html">
-          <img src="assets/images/gallery/logo.png" class="logo-img" alt="">
+          <img src="assets/images/gallery/articulos/imperiumlogo.png" class="logo-img" alt="">
         </a>
         <button type="button" class="d-xl-none btn-menu-close" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasNavbar">
@@ -102,7 +79,7 @@
         </button>
         <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar">
           <div class="offcanvas-header">
-            <img src="assets/images/gallery/logo.png" class="logo-img2" alt="">
+            <img src="assets/images/gallery/articulos/imperiumlogo.png" class="logo-img2" alt="">
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="nav-search p-3 pt-0 border-bottom d-flex d-xl-none">
@@ -953,16 +930,9 @@
                     </address>
                   </div>
                     <p><button type="button" class="btn btn-sm btn-outline-dark px-4">Get Darection<i class="bi bi-arrow-up-right ms-2"></i></button></p>
-                    <p><span><i class="bi bi-envelope me-2"></i></span>example@gmail.com</p>
+                    <p><span><i class="bi bi-envelope me-2"></i></span>Imperiumfitshop@gmail.com</p>
                     <p><span><i class="bi bi-telephone me-2"></i></span>648-378-2255</p>
-                    <p><span><i class="bi bi-globe me-2"></i></span>www.codervent.com</p>
-                    <div class="social-link d-flex align-items-center gap-2">
-                      <a href="javascript:;" class="btn btn-outline-dark"><i class="bi bi-facebook"></i></a>
-                      <a href="javascript:;" class="btn btn-outline-dark"><i class="bi bi-twitter-x"></i></a>
-                      <a href="javascript:;" class="btn btn-outline-dark"><i class="bi bi-instagram"></i></a>
-                      <a href="javascript:;" class="btn btn-outline-dark"><i class="bi bi-youtube"></i></a>
-                      <a href="javascript:;" class="btn btn-outline-dark"><i class="bi bi-amazon"></i></a>
-                    </div>
+                    <p><span><i class="bi bi-globe me-2"></i></span></p>
                  </div>
              </div>
              <div class="col-12 col-lg-3">
