Actualizo index con cambios nuevos

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
         <div class="swiper-slide position-relative">
           <div class="slider-content position-absolute top-50 start-0 end-0 translate-middle-y">
             <div class="container px-3">
-              <p class="sub-title mb-lg-3">Elegance Redefined</p>
-              <h2 class="large-title">Stay Confident! <br>Shop the latest trends now</h2>
+              <p class="sub-title mb-lg-3"></p>
+              <h2 class="large-title"></h2>
               <div class="slide-btn mt-lg-5">
-                <a href="javascript:;" class="btn btn-dark px-md-5 py-md-3 rounded-5">Explore Collection</a>
+               
               </div>
             </div>
           </div>
@@ -128,10 +128,10 @@
         <div class="swiper-slide">
           <div class="slider-content position-absolute top-50 start-0 end-0 translate-middle-y">
             <div class="container py-4 px-3">
-              <p class="sub-title mb-lg-3">The Chic Closet</p>
-              <h2 class="large-title">Casual Fashion <br> Dress up, feel amazing</h2>
+              <p class="sub-title mb-lg-3"></p>
+              <h2 class="large-title"></h2>
               <div class="slide-btn mt-lg-5">
-                <button class="btn btn-dark px-md-5 py-md-3 rounded-5">Explore Collection</button>
+             
               </div>
             </div>
           </div>
@@ -140,10 +140,10 @@
         <div class="swiper-slide">
           <div class="slider-content position-absolute top-50 start-0 end-0 translate-middle-y">
             <div class="container py-4 px-3">
-              <p class="sub-title mb-lg-3">Gypsy Soul Styles</p>
-              <h2 class="large-title">Step Up Your Fashion <br> Discover statement pieces today</h2>
+              <p class="sub-title mb-lg-3"></p>
+              <h2 class="large-title"> <br></h2>
               <div class="slide-btn mt-lg-5">
-                <button class="btn btn-dark px-md-5 py-md-3 rounded-5">Explore Collection</button>
+                <button class="btn btn-dark px-md-5 py-md-3 rounded-5"></button>
               </div>
             </div>
           </div>
@@ -152,10 +152,10 @@
         <div class="swiper-slide">
           <div class="slider-content position-absolute top-50 start-0 end-0 translate-middle-y">
             <div class="container py-4 px-3">
-              <p class="sub-title mb-lg-3">Street Style Diaries</p>
-              <h2 class="large-title">Vintage Glam <br> Dress like a classic beauty</h2>
+              <p class="sub-title mb-lg-3"></p>
+              <h2 class="large-title"><br></h2>
               <div class="slide-btn mt-lg-5">
-                <button class="btn btn-dark px-md-5 py-md-3 rounded-5">Explore Collection</button>
+                <button class="btn btn-dark px-md-5 py-md-3 rounded-5">E</button>
               </div>
             </div>
           </div>
@@ -180,7 +180,7 @@
                 <div class="product-card border rounded-3 p-3">
                   <div class="d-flex flex-column gap-3">
                     <div class="position-relative">
-                     <a href="product-detail.html">
+                      <a href="product-detail.html">
                         <img src="assets/images/gallery/articulos/Elíptica.png" class="product-img img-fluid rounded-3"
                           alt="">
                       </a>
@@ -192,14 +192,14 @@
                         </div>
                       </div>
                       <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
-                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
+
                       </div>
                     </div>
                     <div class="">
                       <h3 class="product-name mb-1" data-bs-toggle="tooltip" data-bs-placement="left"
                         data-bs-title="Wishlist">Elíptica</h3>
                       <p class="mb-0 product-price">1,725.00</p>
-                      <p class="mb-0 product-description"> Tamaño de la máquina: 2200*750*1620MM - Peso: 120 kg</p>
+                      <p class="mb-0 product-description"> Tamaño de la máquina: 2200*750*1620MM  Peso neto: 120 kg</p>
                     </div>
                   </div>
                 </div>
@@ -227,6 +227,7 @@
                       <h3 class="product-name mb-1">Sentadilla con cinturon</h3>
                       <p class="mb-0 product-price d-flex align-items-center gap-2"><span
                           class="prev-price text-decoration-line-through"></span>$1,1200</p>
+                      <p class="mb-0 product-description"> Tamaño de la máquina: 1950*1310*1145 mm Peso neto: 150 kg</p>
                     </div>
                   </div>
                 </div>
@@ -253,6 +254,8 @@
                     <div class="">
                       <h3 class="product-name mb-1">Combo Press de banca</h3>
                       <p class="mb-0 product-price">$1,148.00</p>
+                      <p class="mb-0 product-description"> Tamaño de la máquina (largo x ancho x alto) mm: 1715 x 2035 x 1925 Peso neto: 131 kg</p>
+
                     </div>
                   </div>
                 </div>
@@ -280,6 +283,7 @@
                       <h3 class="product-name mb-1">Elevación de rodillas</h3>
                       <p class="mb-0 product-price d-flex align-items-center gap-2"><span
                           class="prev-price text-decoration-line-through"></span>$445.00</p>
+                      <p class="mb-0 product-description">Tamaño de la máquina: 1270 x 760 x 1560 mm Peso neto: 63 kg</p>
                     </div>
                   </div>
                 </div>
@@ -307,6 +311,7 @@
                       <h3 class="product-name mb-1">Máquina delt</h3>
                       <p class="mb-0 product-price d-flex align-items-center gap-2"><span
                           class="prev-price text-decoration-line-through"></span>$1,275.00</p>
+                       <p class="mb-0 product-description"> Tamaño de la máquina: 840 x 1160 x 1550 mm Peso neto: 187 kg</p>
                     </div>
                   </div>
                 </div>
@@ -334,6 +339,7 @@
                       <h3 class="product-name mb-1">Máquina de curl de piernas boca abajo </h3>
                       <p class="mb-0 product-price d-flex align-items-center gap-2"><span
                           class="prev-price text-decoration-line-through"></span>$1,275.00</p>
+                      <p class="mb-0 product-description">Tamaño de la máquina: 1640 x 1000 x 1550 mm Peso neto: 88 kg </p>
                     </div>
                   </div>
                 </div>
@@ -360,6 +366,7 @@
                     <div class="">
                       <h3 class="product-name mb-1">Fondo para tríceps</h3>
                       <p class="mb-0 product-price">$1,275.00</p>
+                      <p class="mb-0 product-description"> Tamaño de la máquina: 1510 x 1180 x 1550 mm Peso neto: 197 kg</p>
                     </div>
                   </div>
                 </div>
@@ -387,6 +394,7 @@
                       <h3 class="product-name mb-1">Muslo interno y externo</h3>
                       <p class="mb-0 product-price d-flex align-items-center gap-2"><span
                           class="prev-price text-decoration-line-through"></span>$1,357.00</p>
+                       <p class="mb-0 product-description">Tamaño de la máquina: 1520 x 610 x 1550 Peso neto: 212 kg</p> 
                     </div>
                   </div>
                 </div>
@@ -413,6 +421,7 @@
                     <div class="">
                       <h3 class="product-name mb-1">Máquina de flexión y extensión de piernas</h3>
                       <p class="mb-0 product-price">$1,357.00</p>
+                       <p class="mb-0 product-description">Tamaño de maquina: 1300*980*1550 mm peso neto: 210KG</p>
                     </div>
                   </div>
                 </div>
@@ -439,6 +448,7 @@
                     <div class="">
                       <h3 class="product-name mb-1">Press de pecho ajustable</h3>
                       <p class="mb-0 product-price">$1,357.00</p>
+                       <p class="mb-0 product-description">Tamaño de la máquina: 1900 x 1270 x 1550 mm  Peso neto: 210 kg</p>
                     </div>
                   </div>
                 </div>
@@ -465,6 +475,7 @@
                     <div class="">
                       <h3 class="product-name mb-1">Máquina de bíceps y tríceps</h3>
                       <p class="mb-0 product-price">$1,357.00</p>
+                      <p class="mb-0 product-description">Tamaño de la máquina: 1040 x 1000 x 1550 mm Peso neto: 197 kg</p>
                     </div>
                   </div>
                 </div>
@@ -491,6 +502,7 @@
                     <div class="">
                       <h3 class="product-name mb-1">Máquina de glúteos con empuje de cadera</h3>
                       <p class="mb-0 product-price">$1,357.00</p>
+                      <p class="mb-0 product-description">Tamaño de la máquina: 1950*1235*1550 mm Peso neto: 178 KG</p>
                     </div>
                   </div>
                 </div>
@@ -517,6 +529,7 @@
                     <div class="">
                       <h3 class="product-name mb-1">Máquina de prensa lateral de hombros</h3>
                       <p class="mb-0 product-price">$1,275.00</p>
+                      <p class="mb-0 product-description">Tamaño de la máquina: 620*775*1550 mm Peso neto: 150 KG</p>
                     </div>
                   </div>
                 </div>
@@ -543,6 +556,7 @@
                     <div class="">
                       <h3 class="product-name mb-1">Máquina de sentadillas de potencia</h3>
                       <p class="mb-0 product-price">$1,275.00</p>
+                      <p class="mb-0 product-description">Tamaño de la máquina: 1750 x 1550 x 1800 mm peso neto: 160 KG</p>
                     </div>
                   </div>
                 </div>
@@ -569,6 +583,7 @@
                     <div class="">
                       <h3 class="product-name mb-1">Banco de mancuernas ajustable</h3>
                       <p class="mb-0 product-price">$400.00</p>
+                       <p class="mb-0 product-description">Tamaño de la máquina: 1320 x 640 x 485 mm Peso neto: 39 kg</p>
                     </div>
                   </div>
                 </div>
@@ -595,6 +610,7 @@
                     <div class="">
                       <h3 class="product-name mb-1">Banco Utilitario</h3>
                       <p class="mb-0 product-price">$210.00</p>
+                      <p class="mb-0 product-description">Tamaño de la máquina: 1020 x 615 x 1150 mm Peso neto: 26,7 kg</p>
                     </div>
                   </div>
                 </div>
@@ -621,6 +637,7 @@
                     <div class="">
                       <h3 class="product-name mb-1">Elevación de pantorrillas sentado</h3>
                       <p class="mb-0 product-price">$860.00</p>
+                       <p class="mb-0 product-description">Tamaño de la máquina (largo x ancho x alto) mm: 1260 x 590 x 990 Peso neto: 55 kg</p>
                     </div>
                   </div>
                 </div>
@@ -647,6 +664,7 @@
                     <div class="">
                       <h3 class="product-name mb-1">Remo de barra en T</h3>
                       <p class="mb-0 product-price">$736.00</p>
+                      <p class="mb-0 product-description">Tamaño de la máquina (largo x ancho x alto) mm: 1790 x 950 x 1180 Peso neto: 109 kg</p>
                     </div>
                   </div>
                 </div>
@@ -1340,12 +1358,12 @@
                   <div>
                     <address>
                       <strong>Address:</strong>
-                      Panamá, Ciudad de Panamá
+                      Dirección: Brisas del Golf, San Miguelito, Provincia de Panamá
                     </address>
                   </div>
                   <p><button type="button" class="btn btn-sm btn-outline-dark px-4">Get Darection<i class="bi bi-arrow-up-right ms-2"></i></button></p>
-                  <p><span><i class="bi bi-envelope me-2"></i></span>example@gmail.com</p>
-                  <p><span><i class="bi bi-telephone me-2"></i></span>648-378-2255</p>
+                  <p><span><i class="bi bi-envelope me-2"></i></span>imperiumfitshop@gmail.com@gmail.com</p>
+                  <p><span><i class="bi bi-telephone me-2"></i></span>6636-3787</p>
                   <p><span><i class="bi bi-globe me-2"></i></span></p>
                   <div class="social-link d-flex align-items-center gap-2">
                     <a href="javascript:;" class="btn btn-outline-dark"><i class="bi bi-facebook"></i></a>
