--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               </div>
             </div>
           </div>
-          <img src="assets/images/gallery/articulos/Máquina de prensa lateral de hombros .png" class="img-fluid rounded-0" alt="">
+          <img src="assets/images/gallery/slider/slide gym 1.png" class="img-fluid rounded-0" alt="">
         </div>
         <div class="swiper-slide">
           <div class="slider-content position-absolute top-50 start-0 end-0 translate-middle-y">
@@ -155,7 +155,7 @@
               <p class="sub-title mb-lg-3"></p>
               <h2 class="large-title"><br></h2>
               <div class="slide-btn mt-lg-5">
-                <button class="btn btn-dark px-md-5 py-md-3 rounded-5">E</button>
+                <button class="btn btn-dark px-md-5 py-md-3 rounded-5"></button>
               </div>
             </div>
           </div>
@@ -180,14 +180,12 @@
                 <div class="product-card border rounded-3 p-3">
                   <div class="d-flex flex-column gap-3">
                     <div class="position-relative">
-                      <a href="product-detail.html">
                         <img src="assets/images/gallery/articulos/Elíptica.png" class="product-img img-fluid rounded-3"
                           alt="">
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
+
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
@@ -220,7 +218,6 @@
                         </div>
                       </div>
                       <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
-                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
