--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               </div>
             </div>
           </div>
-          <img src="assets/images/gallery/articulos/Combo de press de banca y sentadillas.png" class="img-fluid rounded-0" alt="">
+          <img src="assets/images/gallery/slider/slider gym 2.png" class="img-fluid rounded-0" alt="">
         </div>
         <div class="swiper-slide">
           <div class="slider-content position-absolute top-50 start-0 end-0 translate-middle-y">
@@ -239,8 +239,6 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
@@ -267,13 +265,9 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
-                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
-                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -295,13 +289,9 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
-                      </div>
-                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
-                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
+                      </div>        
                       </div>
                     </div>
                     <div class="">
@@ -323,8 +313,6 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
@@ -356,8 +344,7 @@
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
-                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
-                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
+                    
                       </div>
                     </div>
                     <div class="">
@@ -378,8 +365,6 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
@@ -406,13 +391,9 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
-                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
-                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -433,13 +414,10 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
                       <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
-                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -460,8 +438,6 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
@@ -487,13 +463,9 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
-                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
-                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -514,13 +486,9 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
-                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
-                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -541,13 +509,9 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
-                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
-                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -568,13 +532,9 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
-                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
-                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -595,13 +555,9 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
-                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
-                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -622,13 +578,9 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
-                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
-                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -649,13 +601,9 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
-                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
-                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
