--- a/index.html
+++ b/index.html
@@ -268,6 +268,8 @@
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
+                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
+                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -291,7 +293,9 @@
                         <div class="d-flex flex-column gap-2">
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
-                      </div>        
+                      </div>
+                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
+                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -339,12 +343,11 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
-                    
+                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
+                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -394,6 +397,8 @@
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
+                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
+                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -418,6 +423,7 @@
                         </div>
                       </div>
                       <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
+                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -466,6 +472,8 @@
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
+                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
+                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -489,6 +497,8 @@
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
+                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
+                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -512,6 +522,8 @@
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
+                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
+                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -535,6 +547,8 @@
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
+                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
+                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -558,6 +572,8 @@
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
+                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
+                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -581,6 +597,8 @@
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
+                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
+                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -604,6 +622,8 @@
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
+                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
+                        <a href="javascript:;" class="btn btn-dark rounded-5 w-100">Add to cart</a>
                       </div>
                     </div>
                     <div class="">
@@ -628,8 +648,6 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
@@ -656,8 +674,6 @@
                       </a>
                       <div class="position-absolute top-0 end-0 m-3 product-actions">
                         <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-heart"></i></a>
-                          <a href="javascript:;" class="btn btn-action"><i class="bi bi-funnel"></i></a>
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickViewModal"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
