--- a/index.html
+++ b/index.html
@@ -1655,7 +1655,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Vista Rápida Producto 1</h5>
+        <h5 class="modal-title">Elíptica</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body text-center">
@@ -1672,13 +1672,22 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Vista Rápida Producto 2</h5>
+        <h5 class="modal-title">Sentadilla con cinturón</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body text-center">
-        <img src="assets/images/gallery/articulos/imagen2.png" alt="Producto 2" class="img-fluid mb-3"/>
-        <p class="product-price">$Precio 2</p>
-        <p class="product-description">Descripción breve del producto 2.</p>
+        <img src="assets/images/gallery/articulos/Sentadilla con cinturon.png" alt="Producto 2" class="img-fluid mb-3"/>
+        <p class="product-price">$Precio 1,1200.00</p>
+        <p class="product-description">Tamaño de la máquina: 1950*1310*1145 mm Peso de la máquina: 150 kg
+                                        Características
+                                        1. Amplio rango de movimiento sin forzar los hombros, la columna ni la espalda baja.
+                                        2. Soporte para múltiples racks y posicionamiento de cinturones para adaptarse a todas las alturas.
+                                        3. Función múltiple con accesorio de barra para levantamientos de peso muerto, remos, etc.
+                                        4. Cinturón acolchado para mayor comodidad.
+                                        5. Ruedas de transporte para moverlo si es necesario.
+                                        6. Gran estante de almacenamiento para guardar pesas.
+                                        7. Se pueden agregar bandas de resistencia.
+                                        8. Diseño compacto.</p>
       </div>
     </div>
   </div>
@@ -1689,13 +1698,15 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Vista Rápida Producto 3</h5>
+        <h5 class="modal-title">Elevación de rodillas</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body text-center">
-        <img src="assets/images/gallery/articulos/imagen3.png" alt="Producto 3" class="img-fluid mb-3"/>
-        <p class="product-price">$Precio 3</p>
-        <p class="product-description">Descripción breve del producto 3.</p>
+        <img src="assets/images/gallery/articulos/Elevación de rodillas.png" alt="Producto 3" class="img-fluid mb-3"/>
+        <p class="product-price">$445.00</p>
+        <p class="product-description">Tamaño de la máquina: 1270 x 760 x 1560 mm Peso de la máquina: 63 kg                        
+                                      Tubo principal 1: tubo rectangular de 50 x 100 x 2,5 mm
+                                      Tubo principal 2: tubo rectangular de 50 x 75 x 2,9 mm.</p>
       </div>
     </div>
   </div>
