--- a/index.html
+++ b/index.html
@@ -1698,12 +1698,12 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Elevación de rodillas</h5>
+        <h5 class="modal-title">Press de banca y sentadillas</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body text-center">
-        <img src="assets/images/gallery/articulos/Elevación de rodillas.png" alt="Producto 3" class="img-fluid mb-3"/>
-        <p class="product-price">$445.00</p>
+        <img src="assets/images/gallery/articulos/Combo de press de banca y sentadillas.png" alt="Producto 3" class="img-fluid mb-3"/>
+        <p class="product-price">$1,148.00</p>
         <p class="product-description">Tamaño de la máquina: 1270 x 760 x 1560 mm Peso de la máquina: 63 kg                        
                                       Tubo principal 1: tubo rectangular de 50 x 100 x 2,5 mm
                                       Tubo principal 2: tubo rectangular de 50 x 75 x 2,9 mm.</p>
@@ -1717,13 +1717,15 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Vista Rápida Producto 4</h5>
+        <h5 class="modal-title">Elevación de rodillas</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body text-center">
         <img src="assets/images/gallery/articulos/imagen4.png" alt="Producto 4" class="img-fluid mb-3"/>
-        <p class="product-price">$Precio 4</p>
-        <p class="product-description">Descripción breve del producto 4.</p>
+        <p class="product-price">$$445.00</p>
+        <p class="product-description">Tamaño de la máquina: 1270 x 760 x 1560 mm Peso de la máquina: 63 kg                        
+                                      Tubo principal 1: tubo rectangular de 50 x 100 x 2,5 mm
+                                      Tubo principal 2: tubo rectangular de 50 x 75 x 2,9 mm.</p>
       </div>
     </div>
   </div>
@@ -1734,13 +1736,28 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Vista Rápida Producto 5</h5>
+        <h5 class="modal-title">Máquina delt</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body text-center">
-        <img src="assets/images/gallery/articulos/imagen5.png" alt="Producto 5" class="img-fluid mb-3"/>
-        <p class="product-price">$Precio 5</p>
-        <p class="product-description">Descripción breve del producto 5.</p>
+        <img src="assets/images/gallery/articulos/maquina delt.png" alt="Producto 5" class="img-fluid mb-3"/>
+        <p class="product-price">$1,275.00</p>
+        <p class="product-description">Tamaño de la máquina: 840 x 1160 x 1550 mm Tamaño del embalaje: 1600 x 800 x 580mm             
+NW: 80 kg + 81 kg (pila de pesas) = 161 kg            
+Peso neto: 187 kg
+Tubo principal 1: tubo rectangular de 50 x 100 x 2,5 mm
+Tubo principal 2: tubo rectangular de 50 x 75 x 2,5 mm
+
+1. Versión engrosada de la pila de pesas (especificación 430*100*15,5 mm), el ruido en decibelios generado durante el movimiento es menor que el de la placa de pesas convencional y el sonido es tranquilo y no nítido.
+  2. Las etiquetas de la pila de pesas cambian gradualmente de verde, amarillo y rojo, lo que ofrece a los usuarios una visión directa y clara.
+3. La varilla guía está hecha de tubo de acero inoxidable de Φ25 x 2,0 mm, lo que reduce la vibración durante el movimiento de la pila de pesas y lo hace más suave. Sin embargo, la varilla guía convencional es de tubo de acero inoxidable de Φ20 x 2,0 mm.
+ 4. El diagrama de la guía de entrenamiento, sencillo e intuitivo, muestra cómo entrenar correctamente y qué grupos musculares están involucrados. El icono rojo gira la posición del eje para guiar al usuario a entrenar en una posición neutra.
+5. El mango, la unión del eje y el pasador de la pila de pesas están hechos de aleación de aluminio oxidado.
+6. Utilizando un cable de acero importado de Taiwán de Φ5,8 mm (estructura de alambre de acero de 7 x 19 hebras), lubricación interna y encapsulado de nailon.
+7. Tubo principal: tubo rectangular de 50*100*2,5 mm, tubo secundario: 50*75*2,5 mm y tubo rectangular de 50*50*2,5 mm, etc.
+8. Cada marco adopta un proceso de pulverización electrostática, tres recubrimientos y dos horneados.
+9. El diseño del producto es fácil de montar y desmontar, el tamaño del embalaje es pequeño y el transporte ahorra más espacio y es más económico.
+.</p>
       </div>
     </div>
   </div>
@@ -1751,13 +1768,22 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Vista Rápida Producto 6</h5>
+        <h5 class="modal-title">máquina curl de piernas boca abajo </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body text-center">
-        <img src="assets/images/gallery/articulos/imagen6.png" alt="Producto 6" class="img-fluid mb-3"/>
-        <p class="product-price">$Precio 6</p>
-        <p class="product-description">Descripción breve del producto 6.</p>
+        <img src="assets/images/gallery/articulos/Maquina Curl de piernas boca abajo.png" alt="Producto 6" class="img-fluid mb-3"/>
+        <p class="product-price">$1,275.00</p>
+        <p class="product-description">1. Versión engrosada de la pila de pesas (especificaciones 430 x 100 x 15,5 mm). El ruido generado durante el movimiento es menor que el de las pesas convencionales, y el sonido es suave y no nítido.
+ 2. Las etiquetas de la pila de pesas cambian gradualmente de verde a amarillo y rojo, lo que ofrece a los usuarios una visión directa y clara.
+3. La barra guía está hecha de tubo de acero inoxidable de Φ20 x 2,0 mm, lo que reduce la vibración durante el movimiento de la columna de pesas y lo hace más suave. Sin embargo, la barra guía convencional es de tubo de acero inoxidable de Φ20 x 2,0 mm.
+ 4. El diagrama de la guía de entrenamiento, sencillo e intuitivo, muestra cómo entrenar correctamente y qué grupos musculares están involucrados. El icono rojo gira la posición del eje para guiar al usuario a entrenar en una posición neutra.
+5. El mango, la unión del eje y el pasador de la pila de pesas están hechos de aleación de aluminio oxidado.
+6. Utilizando un cable de acero importado de Taiwán de Φ5,8 mm (estructura de alambre de acero de 7 x 19 hebras), lubricación interna y encapsulado de nailon.
+7. Tubo principal: tubo rectangular de 50*100*2,5 mm, tubo secundario: 50*75*2,5 mm y tubo rectangular de 50*50*2,5 mm, etc.
+8. Cada marco adopta un proceso de pulverización electrostática, tres recubrimientos y dos horneados.
+9. El diseño del producto es fácil de montar y desmontar, el tamaño del embalaje es pequeño y el transporte ahorra más espacio y es económico.
+</p>
       </div>
     </div>
   </div>
@@ -1768,13 +1794,25 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Vista Rápida Producto 7</h5>
+        <h5 class="modal-title">Fondos para tríceps</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body text-center">
-        <img src="assets/images/gallery/articulos/imagen7.png" alt="Producto 7" class="img-fluid mb-3"/>
-        <p class="product-price">$Precio 7</p>
-        <p class="product-description">Descripción breve del producto 7.</p>
+        <img src="assets/images/gallery/articulos/Fondo para tríceps.png" alt="Producto 7" class="img-fluid mb-3"/>
+        <p class="product-price">$1,275.00</p>
+        <p class="product-description">Tamaño de la máquina: 1510 x 1180 x 1550 mm Peso neto: 197 kg
+Tubo principal 1: tubo rectangular de 50 x 100 x 2,5 mm
+Tubo principal 2: tubo rectangular de 50 x 75 x 2,5 mm
+1. Versión engrosada de la pila de pesas (especificación 430*100*15,5 mm), el ruido en decibelios generado durante el movimiento es menor que el de la placa de pesas convencional y el sonido es tranquilo y no nítido.
+  2. Las etiquetas de la pila de pesas cambian gradualmente de verde, amarillo y rojo, lo que ofrece a los usuarios una visión directa y clara.
+3. La varilla guía está hecha de tubo de acero inoxidable de Φ25 x 2,0 mm, lo que reduce la vibración durante el movimiento de la pila de pesas y lo hace más suave. Sin embargo, la varilla guía convencional es de tubo de acero inoxidable de Φ20 x 2,0 mm.
+ 4. El diagrama de la guía de entrenamiento, sencillo e intuitivo, muestra cómo entrenar correctamente y qué grupos musculares están involucrados. El icono rojo gira la posición del eje para guiar al usuario a entrenar en una posición neutra.
+5. El mango, la unión del eje y el pasador de la pila de pesas están hechos de aleación de aluminio oxidado.
+6. Utilizando un cable de acero importado de Taiwán de Φ5,8 mm (estructura de alambre de acero de 7 x 19 hebras), lubricación interna y encapsulado de nailon.
+7. Tubo principal: tubo rectangular de 50*100*2,5 mm, tubo secundario: 50*75*2,5 mm y tubo rectangular de 50*50*2,5 mm, etc.
+8. Cada marco adopta un proceso de pulverización electrostática, tres recubrimientos y dos horneados.
+9. El diseño del producto es fácil de montar y desmontar, el tamaño del embalaje es pequeño y el transporte ahorra más espacio y es más económico.
+</p>
       </div>
     </div>
   </div>
@@ -1785,13 +1823,25 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Vista Rápida Producto 8</h5>
+        <h5 class="modal-title">: Muslo interno y externo</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body text-center">
-        <img src="assets/images/gallery/articulos/imagen8.png" alt="Producto 8" class="img-fluid mb-3"/>
-        <p class="product-price">$Precio 8</p>
-        <p class="product-description">Descripción breve del producto 8.</p>
+        <img src="assets/images/gallery/articulos/Muslo interno y externo.png " alt="Producto 8" class="img-fluid mb-3"/>
+        <p class="product-price">$1,357.00</p>
+        <p class="product-description">Tamaño de la máquina: 1520 x 610 x 1550 Peso neto: 212 kg
+Tubo principal 1: tubo rectangular de 50 x 100 x 2,5 mm
+Tubo principal 2: tubo rectangular de 50 x 75 x 2,5 mm
+1. Versión engrosada de la pila de pesas (especificación 430*100*15,5 mm), el ruido en decibelios generado durante el movimiento es menor que el de la placa de pesas convencional y el sonido es tranquilo y no nítido.
+  2. Las etiquetas de la pila de pesas cambian gradualmente de verde, amarillo y rojo, lo que ofrece a los usuarios una visión directa y clara.
+3. La varilla guía está hecha de tubo de acero inoxidable de Φ25 x 2,0 mm, lo que reduce la vibración durante el movimiento de la pila de pesas y lo hace más suave. Sin embargo, la varilla guía convencional es de tubo de acero inoxidable de Φ20 x 2,0 mm.
+ 4. El diagrama de la guía de entrenamiento, sencillo e intuitivo, muestra cómo entrenar correctamente y qué grupos musculares están involucrados. El icono rojo gira la posición del eje para guiar al usuario a entrenar en una posición neutra.
+5. El mango, la unión del eje y el pasador de la pila de pesas están hechos de aleación de aluminio oxidado.
+6. Utilizando un cable de acero importado de Taiwán de Φ5,8 mm (estructura de alambre de acero de 7 x 19 hebras), lubricación interna y encapsulado de nailon.
+7. Tubo principal: tubo rectangular de 50*100*2,5 mm, tubo secundario: 50*75*2,5 mm y tubo rectangular de 50*50*2,5 mm, etc.
+8. Cada marco adopta un proceso de pulverización electrostática, tres recubrimientos y dos horneados.
+9. El diseño del producto es fácil de montar y desmontar, el tamaño del embalaje es pequeño y el transporte ahorra más espacio y es más económico.
+</p>
       </div>
     </div>
   </div>
@@ -1802,13 +1852,25 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Vista Rápida Producto 9</h5>
+        <h5 class="modal-title">Press de pecho ajustable </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body text-center">
-        <img src="assets/images/gallery/articulos/imagen9.png" alt="Producto 9" class="img-fluid mb-3"/>
-        <p class="product-price">$Precio 9</p>
-        <p class="product-description">Descripción breve del producto 9.</p>
+        <img src="assets/images/gallery/articulos/Press de pecho ajustable.png" alt="Producto 9" class="img-fluid mb-3"/>
+        <p class="product-price">$1,375.00</p>
+        <p class="product-description">Tamaño de la máquina: 1900 x 1270 x 1550 mm  Peso neto: 210 kg
+Tubo principal 1: tubo rectangular de 50 x 100 x 2,5 mm
+Tubo principal 2: tubo rectangular de 50 x 75 x 2,5 mm
+1. Versión engrosada de la pila de pesas (especificación 430*100*15,5 mm), el ruido en decibelios generado durante el movimiento es menor que el de la placa de pesas convencional y el sonido es tranquilo y no nítido.
+  2. Las etiquetas de la pila de pesas cambian gradualmente de verde, amarillo y rojo, lo que ofrece a los usuarios una visión directa y clara.
+3. La varilla guía está hecha de tubo de acero inoxidable de Φ25 x 2,0 mm, lo que reduce la vibración durante el movimiento de la pila de pesas y lo hace más suave. Sin embargo, la varilla guía convencional es de tubo de acero inoxidable de Φ20 x 2,0 mm.
+ 4. El diagrama de la guía de entrenamiento, sencillo e intuitivo, muestra cómo entrenar correctamente y qué grupos musculares están involucrados. El icono rojo gira la posición del eje para guiar al usuario a entrenar en una posición neutra.
+5. El mango, la unión del eje y el pasador de la pila de pesas están hechos de aleación de aluminio oxidado.
+6. Utilizando un cable de acero importado de Taiwán de Φ5,8 mm (estructura de alambre de acero de 7 x 19 hebras), lubricación interna y encapsulado de nailon.
+7. Tubo principal: tubo rectangular de 50*100*2,5 mm, tubo secundario: 50*75*2,5 mm y tubo rectangular de 50*50*2,5 mm, etc.
+8. Cada marco adopta un proceso de pulverización electrostática, tres recubrimientos y dos horneados.
+9. El diseño del producto es fácil de montar y desmontar, el tamaño del embalaje es pequeño y el transporte ahorra más espacio y es más económico.
+</p>
       </div>
     </div>
   </div>
@@ -1819,13 +1881,25 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Vista Rápida Producto 10</h5>
+        <h5 class="modal-title">Máquina de bíceps y tríceps</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body text-center">
-        <img src="assets/images/gallery/articulos/imagen10.png" alt="Producto 10" class="img-fluid mb-3"/>
-        <p class="product-price">$Precio 10</p>
-        <p class="product-description">Descripción breve del producto 10.</p>
+        <img src="assets/images/gallery/articulos/Máquina de bíceps y tríceps.png" alt="Producto 10" class="img-fluid mb-3"/>
+        <p class="product-price">$1,357.00</p>
+        <p class="product-description">Tamaño de la máquina: 1040 x 1000 x 1550 mm Peso neto: 197 kg
+Tubo principal 1: tubo rectangular de 50 x 100 x 2,5 mm
+Tubo principal 2: tubo rectangular de 50 x 75 x 2,5 mm
+1. Versión engrosada de la pila de pesas (especificación 430*100*15,5 mm), el ruido en decibelios generado durante el movimiento es menor que el de la placa de pesas convencional y el sonido es tranquilo y no nítido.
+  2. Las etiquetas de la pila de pesas cambian gradualmente de verde, amarillo y rojo, lo que ofrece a los usuarios una visión directa y clara.
+3. La varilla guía está hecha de tubo de acero inoxidable de Φ25 x 2,0 mm, lo que reduce la vibración durante el movimiento de la pila de pesas y lo hace más suave. Sin embargo, la varilla guía convencional es de tubo de acero inoxidable de Φ20 x 2,0 mm.
+ 4. El diagrama de la guía de entrenamiento, sencillo e intuitivo, muestra cómo entrenar correctamente y qué grupos musculares están involucrados. El icono rojo gira la posición del eje para guiar al usuario a entrenar en una posición neutra.
+5. El mango, la unión del eje y el pasador de la pila de pesas están hechos de aleación de aluminio oxidado.
+6. Utilizando un cable de acero importado de Taiwán de Φ5,8 mm (estructura de alambre de acero de 7 x 19 hebras), lubricación interna y encapsulado de nailon.
+7. Tubo principal: tubo rectangular de 50*100*2,5 mm, tubo secundario: 50*75*2,5 mm y tubo rectangular de 50*50*2,5 mm, etc.
+8. Cada marco adopta un proceso de pulverización electrostática, tres recubrimientos y dos horneados.
+9. El diseño del producto es fácil de montar y desmontar, el tamaño del embalaje es pequeño y el transporte ahorra más espacio y es más económico.
+</p>
       </div>
     </div>
   </div>
@@ -1836,13 +1910,25 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Vista Rápida Producto 11</h5>
+        <h5 class="modal-title">Máquina de glúteos con empuje de cadera</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body text-center">
-        <img src="assets/images/gallery/articulos/imagen11.png" alt="Producto 11" class="img-fluid mb-3"/>
-        <p class="product-price">$Precio 11</p>
-        <p class="product-description">Descripción breve del producto 11.</p>
+        <img src="assets/images/gallery/articulos/Máquina de glúteos con empuje de cadera.png" alt="Producto 11" class="img-fluid mb-3"/>
+        <p class="product-price">$1,357.00</p>
+        <p class="product-description">Tamaño de la máquina: 1950*1235*1550 mm Peso neto: 178 KG
+
+Tubo principal 1: tubo rectangular de 50*100*2,5 mm
+
+Tubo principal 2: tubo rectangular de 50*75*2,5 mm 
+1. Las etiquetas de la pila de pesas cambian gradualmente de verde, amarillo y rojo, lo que brinda a los usuarios una vista visual directa y clara.
+2. El diagrama de la guía de entrenamiento, sencillo e intuitivo, muestra cómo entrenar correctamente y qué grupos musculares están involucrados. El icono rojo gira la posición del eje para guiar al usuario a entrenar en una posición neutra.
+3. El mango, la unión del eje y el pasador de la pila de pesas están hechos de aleación de aluminio oxidado.
+4. Utilizando un cable de acero importado de Taiwán de Φ5,8 mm (estructura de alambre de acero de 7 x 19 hebras), lubricación interna y encapsulado de nailon.
+5. Tubo principal: tubo rectangular de 50*100*2,5 mm, tubo secundario: 50*75*2,5 mm y tubo rectangular de 50*50*2,5 mm, etc.
+6. Cada marco adopta un proceso de pulverización electrostática, tres recubrimientos y dos procesos de horneado.
+7. El diseño del producto es fácil de montar y desmontar, el tamaño del embalaje es pequeño y el transporte ahorra más espacio y es económico.
+</p>
       </div>
     </div>
   </div>
