--- a/index.html
+++ b/index.html
@@ -2071,7 +2071,7 @@ Tubo principal 2: tubo rectangular de 50 x 75 x 2,5 mm
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
       </div>
       <div class="modal-body text-center">
-        <img src="assets/images/gallery/articulos/imagen18.png" alt="Producto 18" class="img-fluid mb-3"/>
+        <img src="assets/images/gallery/articulos/Remo con barra en T.png" alt="Producto 18" class="img-fluid mb-3"/>
         <p class="product-price">$736.00</p>
         <p class="product-description">Tamaño de la máquina (largo x ancho x alto) mm: 1790 x 950 x 1180 Peso neto: 109 kg
 Características:
