--- a/index.html
+++ b/index.html
@@ -633,19 +633,17 @@
                           <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickView19"><i class="bi bi-eye"></i></a>
                         </div>
                       </div>
-                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
-                   
-                      </div>
+                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart"></div>
                     </div>
                     <div class="">
                       <h3 class="product-name mb-1">Mancuerna hexagonal de goma</h3>
                       <p class="mb-0 product-price">$736.00</p>
                       <p class="mb-0 product-description"></p>
-                    </div>
+                     </div>
                   </div>
                 </div>
               </div>
-               </div>
+                </div>
                   </div>
                 </div>
               </div>
@@ -672,7 +670,7 @@
               </div>
               <div class="col">
                 <div class="product-card border rounded-3 p-3">
-                  <div class="d-flex flex-column gap-3">
+                  <div class="d-flex flex-column gap-3"></div>
                     <div class="position-relative">
                         <img src="assets/images/gallery/articulos/Mancuerna fija de goma negra.jpeg" class="product-img img-fluid rounded-3"
                           alt="">
@@ -690,16 +688,17 @@
                       <h3 class="product-name mb-1">Mancuerna fija de goma negra</h3>
                       <p class="mb-0 product-price">$7</p>
                       <p class="mb-0 product-description"></p>
-                    </div>
+                </div>
                   </div>
                 </div>
-                    </div>
+              </div>
+                </div>
                   </div>
                 </div>
               </div>
                <div class="col">
                 <div class="product-card border rounded-3 p-3">
-                  <div class="d-flex flex-column gap-3">
+                  <div class="d-flex flex-column gap-3"></div>
                     <div class="position-relative">
                         <img src="assets/images/gallery/articulos/CAJAS DE ESPUMA PARA JUMP SAFE.jpeg" class="product-img img-fluid rounded-3"
                           alt="">
@@ -721,7 +720,7 @@
                 </div>
                   <div class="col">
                 <div class="product-card border rounded-3 p-3">
-                  <div class="d-flex flex-column gap-3">
+                  <div class="d-flex flex-column gap-3"></div>
                     <div class="position-relative">
                         <img src="assets/images/gallery/articulos/STEP.jpeg" class="product-img img-fluid rounded-3"
                           alt="">
@@ -743,7 +742,7 @@
                 </div>
                    <div class="col">
                 <div class="product-card border rounded-3 p-3">
-                  <div class="d-flex flex-column gap-3">
+                  <div class="d-flex flex-column gap-3"></div>
                     <div class="position-relative">
                         <img src="assets/images/gallery/articulos/PLATAFORMA DE LEVANTAMIENTO DE PESAS.jpeg" class="product-img img-fluid rounded-3"
                           alt="">
@@ -765,7 +764,7 @@
                 </div>
                                    <div class="col">
                 <div class="product-card border rounded-3 p-3">
-                  <div class="d-flex flex-column gap-3">
+                  <div class="d-flex flex-column gap-3"></div>
                     <div class="position-relative">
                         <img src="assets/images/gallery/articulos/Pelota de yoga de equilibrio.jpeg" class="product-img img-fluid rounded-3"
                           alt="">
@@ -787,7 +786,7 @@
                 </div>
                    <div class="col">
                 <div class="product-card border rounded-3 p-3">
-                  <div class="d-flex flex-column gap-3">
+                  <div class="d-flex flex-column gap-3"></div>
                     <div class="position-relative">
                         <img src="assets/images/gallery/articulos/Banco abdominal ajustable.jpeg" class="product-img img-fluid rounded-3"
                           alt="">
@@ -809,7 +808,7 @@
                 </div>
                  <div class="col">
                 <div class="product-card border rounded-3 p-3">
-                  <div class="d-flex flex-column gap-3">
+                  <div class="d-flex flex-column gap-3"></div>
                     <div class="position-relative">
                         <img src="assets/images/gallery/articulos/SOPORTE PARA MANCUERNAS.jpeg" class="product-img img-fluid rounded-3"
                           alt="">
@@ -831,7 +830,7 @@
                 </div>
                 <div class="col">
                 <div class="product-card border rounded-3 p-3">
-                  <div class="d-flex flex-column gap-3">
+                  <div class="d-flex flex-column gap-3"></div>
                     <div class="position-relative">
                         <img src="assets/images/gallery/articulos/Soporte para mancuernas hexagonales.jpeg" class="product-img img-fluid rounded-3"
                           alt="">
@@ -853,7 +852,7 @@
                 </div>
                 <div class="col">
                 <div class="product-card border rounded-3 p-3">
-                  <div class="d-flex flex-column gap-3">
+                  <div class="d-flex flex-column gap-3"></div>
                     <div class="position-relative">
                         <img src="assets/images/gallery/articulos/Escaladora de escalera.jpeg" class="product-img img-fluid rounded-3"
                           alt="">
