--- a/index.html
+++ b/index.html
@@ -594,30 +594,30 @@
                 </div>
               </div>
               <div class="col">
-                <div class="product-card border rounded-3 p-3">
-                  <div class="d-flex flex-column gap-3">
-                    <div class="position-relative">
-                        <img src="assets/images/gallery/articulos/Remo con barra en T.png" class="product-img img-fluid rounded-3"
-                          alt="">
-                      </a>
-                      <div class="position-absolute top-0 end-0 m-3 product-actions">
-                        <div class="d-flex flex-column gap-2">
-                          <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickView18"><i class="bi bi-eye"></i></a>
-                        </div>
-                      </div>
-                      <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart">
-                   
-                      </div>
-                    </div>
-                    <div class="">
-                      <h3 class="product-name mb-1">Remo de barra en T</h3>
-                      <p class="mb-0 product-price">$736.00</p>
-                      <p class="mb-0 product-description"></p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div><!--end row-->
+  <div class="product-card border rounded-3 p-3">
+    <div class="d-flex flex-column gap-3">
+      <div class="position-relative">
+        <a href="product-detail.html">
+          <img src="assets/images/gallery/articulos/Remo con barra en T.png" class="product-img img-fluid rounded-3" alt="">
+        </a>
+        <div class="position-absolute top-0 end-0 m-3 product-actions">
+          <div class="d-flex flex-column gap-2">
+            <a href="javascript:;" class="btn btn-action" data-bs-toggle="modal" data-bs-target="#QuickView18">
+              <i class="bi bi-eye"></i>
+            </a>
+          </div>
+        </div>
+        <div class="position-absolute bottom-0 start-0 end-0 m-3 product-cart"></div>
+      </div>
+      <div class="">
+        <h3 class="product-name mb-1">Remo de barra en T</h3>
+        <p class="mb-0 product-price">$736.00</p>
+        <p class="mb-0 product-description"></p>
+      </div>
+    </div>
+  </div>
+</div>
+    </div><!--end row-->
           </div>
           <div class="tab-pane fade" id="best-seller">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-4">
